✨ (bib): Upbade bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,180 @@
----
----
-
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{KHADIR2022114481,
+  title       = {Surface micropatterning for the formation of an in vitro functional endothelial model for cell-based biosensors},
+  journal     = {Biosensors and Bioelectronics},
+  pages       = {114481},
+  year        = {2022},
+  issn        = {0956-5663},
+  doi         = {https://doi.org/10.1016/j.bios.2022.114481},
+  url         = {https://www.sciencedirect.com/science/article/pii/S0956566322005218},
+  html        = {https://www.sciencedirect.com/science/article/pii/S0956566322005218},
+  bibtex_show = {true},
+  dimensions  = {false},
+  author      = {Zhor Khadir and Victor Schmidt and Kevin Chabot and Jean-François Bryche and Ulrike Froehlich and Julien Moreau and Michael Canva and Paul Charette and Michel Grandbois},
+  keywords    = {Surface micropatterning, Endothelium model, Cell-based biosensing, Cell response, Surface plasmon resonance imaging},
+  pdf         = {https://reader.elsevier.com/reader/sd/pii/S0956566322005218}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{schmidt2021climategan,
+  title       = {ClimateGAN: Raising Climate Change Awareness by Generating Images of Floods},
+  dimensions  = {false},
+  author      = {Victor Schmidt and Alexandra Sasha Luccioni and Mélisande Teng and Tianyu Zhang and Alexia Reynaud and Sunand Raghupathi and Gautier Cosne and Adrien Juraver and Vahe Vardanyan and Alex Hernandez-Garcia and Yoshua Bengio},
+  year        = {2022},
+  journal     = {ICLR},
+  url         = {https://arxiv.org/abs/2110.02871v1},
+  html        = {https://arxiv.org/abs/2110.02871v1},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/pdf/2110.02871.pdf}
+}
+
+@inproceedings{duval2022phast,
+  title       = {Ph{AST}: Physics-Aware, Scalable, and Task-specific {GNN}s for Accelerated Catalyst Design},
+  dimensions  = {false},
+  author      = {Alexandre AGM Duval and Victor Schmidt and Santiago Miret and Yoshua Bengio and Alex Hern{\'a}ndez-Garc{\'\i}a and David Rolnick},
+  booktitle   = {AI for Accelerated Materials Design NeurIPS 2022 Workshop},
+  year        = {2022},
+  url         = {https://openreview.net/forum?id=hHercGKiXvP},
+  html        = {https://openreview.net/forum?id=hHercGKiXvP},
+  bibtex_show = {true},
+  pdf         = {https://openreview.net/pdf?id=hHercGKiXvP}
+}
+
+@article{duval2023faenet,
+  title       = {FAENet: Frame Averaging Equivariant GNN for Materials Modeling},
+  dimensions  = {false},
+  author      = {Alexandre Duval and Victor Schmidt and Alex Hernandez Garcia and Santiago Miret and Fragkiskos D. Malliaros and Yoshua Bengio and David Rolnick},
+  year        = {2023},
+  journal     = {ICML 2023},
+  url         = {https://arxiv.org/abs/2305.05577v1},
+  html        = {https://arxiv.org/abs/2305.05577v1},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/pdf/2305.05577.pdf}
+}
+
+
+@article{lahlou2023torchgfn,
+  title       = {torchgfn: A PyTorch GFlowNet library},
+  dimensions  = {false},
+  author      = {Salem Lahlou and Joseph D. Viviano and Victor Schmidt},
+  year        = {2023},
+  journal     = {arXiv preprint arXiv: 2305.14594},
+  url         = {https://arxiv.org/abs/2305.14594v1},
+  html        = {https://arxiv.org/abs/2305.14594v1},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/pdf/2305.14594.pdf}
+}
+
+
+@article{gupta2020coviagentsim,
+  title       = {COVI-AgentSim: an Agent-based Model for Evaluating Methods of Digital Contact Tracing},
+  dimensions  = {false},
+  author      = {Prateek Gupta and Tegan Maharaj and Martin Weiss and Nasim Rahaman and Hannah Alsdurf and Abhinav Sharma and Nanor Minoyan and Soren Harnois-Leblanc and Victor Schmidt and Pierre-Luc St. Charles and Tristan Deleu and Andrew Williams and Akshay Patel and Meng Qu and Olexa Bilaniuk and Gaétan Marceau Caron and Pierre Luc Carrier and Satya Ortiz-Gagné and Marc-Andre Rousseau and David Buckeridge and Joumana Ghosn and Yang Zhang and Bernhard Schölkopf and Jian Tang and Irina Rish and Christopher Pal and Joanna Merckx and Eilif B. Muller and Yoshua Bengio},
+  year        = {2020},
+  journal     = {arXiv preprint arXiv: Arxiv-2010.16004},
+  url         = {https://arxiv.org/abs/2010.16004v1},
+  html        = {https://arxiv.org/abs/2010.16004v1},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/pdf/2010.16004.pdf}
+}
+
+@inproceedings{bengio2021predicting,
+  title       = {Predicting Infectiousness for Proactive Contact Tracing},
+  dimensions  = {false},
+  author      = {Yoshua Bengio and Prateek Gupta and Tegan Maharaj and Nasim Rahaman and Martin Weiss and Tristan Deleu and Eilif Benjamin Muller and Meng Qu and victor schmidt and Pierre-luc St-charles and hannah alsdurf and Olexa Bilaniuk and david buckeridge and gaetan caron and pierre luc carrier and Joumana Ghosn and satya ortiz gagne and Christopher Pal and Irina Rish and Bernhard Sch{\"o}lkopf and abhinav sharma and Jian Tang and andrew williams},
+  booktitle   = {ICLR},
+  year        = {2021},
+  url         = {https://openreview.net/forum?id=lVgB2FUbzuQ},
+  html        = {https://openreview.net/forum?id=lVgB2FUbzuQ},
+  bibtex_show = {true},
+  pdf         = {https://openreview.net/pdf?id=lVgB2FUbzuQ}
+}
+
+@article{9325146,
+  journal     = {IEEE Computer Graphics and Applications},
+  volume      = {41},
+  pages       = {8-14},
+  doi         = {10.1109/MCG.2020.3025425},
+  title       = {Using Artificial Intelligence to Visualize the Impacts of Climate Change},
+  year        = {2021},
+  dimensions  = {false},
+  author      = {Alexandra Luccioni and Victor Schmidt and Vahe Vardanyan and Yoshua Bengio},
+  url         = {https://ieeexplore.ieee.org/document/9325146},
+  html        = {https://ieeexplore.ieee.org/document/9325146},
+  bibtex_show = {true},
+  pdf         = {https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9325146}
+}
+
+@article{schmidt2020modeling,
+  title       = {Modeling Cloud Reflectance Fields using Conditional Generative Adversarial Networks},
+  dimensions  = {false},
+  author      = {Victor Schmidt and Mustafa Alghali and Kris Sankaran and Tianle Yuan and Yoshua Bengio},
+  year        = {2020},
+  journal     = {Climate Change AI workshop, NeurIPS},
+  url         = {https://arxiv.org/abs/2002.07579v2},
+  html        = {https://arxiv.org/abs/2002.07579v2},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/pdf/2002.07579.pdf}
+}
+
+@article{cosne2020using,
+  title       = {Using Simulated Data to Generate Images of Climate Change},
+  dimensions  = {false},
+  author      = {Gautier Cosne and Adrien Juraver and Mélisande Teng and Victor Schmidt and Vahe Vardanyan and Alexandra Luccioni and Yoshua Bengio},
+  year        = {2020},
+  journal     = {Machine Learning in the Real World workshop, ICLR},
+  url         = {https://arxiv.org/abs/2001.09531v1},
+  html        = {https://arxiv.org/abs/2001.09531v1},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/pdf/2001.09531.pdf}
+}
+
+@article{schmidt2019isualizing,
+  title       = {Visualizing the Consequences of Climate Change Using Cycle-Consistent Adversarial Networks},
+  dimensions  = {false},
+  author      = {Victor Schmidt and Alexandra Luccioni and S. Karthik Mukkavilli and Narmada Balasooriya and Kris Sankaran and Jennifer Chayes and Yoshua Bengio},
+  year        = {2019},
+  journal     = {AI for Social Good workshop, ICLR},
+  url         = {https://arxiv.org/abs/1905.03709},
+  html        = {https://arxiv.org/abs/1905.03709},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/pdf/1905.03709.pdf}
+}
+
+@article{lacoste2019quantifying,
+  title       = {Quantifying the Carbon Emissions of Machine Learning},
+  dimensions  = {false},
+  author      = {Alexandre Lacoste and Alexandra Luccioni and Victor Schmidt and Thomas Dandres},
+  year        = {2019},
+  journal     = {Climate Change AI workshop, NeurIPS},
+  url         = {https://arxiv.org/abs/1910.09700},
+  html        = {https://arxiv.org/abs/1910.09700},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/pdf/1910.09700.pdf}
 }
 
 @article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+  abbr        = {PhysRev},
+  title       = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+  dimensions  = {false},
+  author      = {Einstein, A. and Podolsky, B. and Rosen, N.},
+  abstract    = {In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
+  bibtex_show = {true},
+  journal     = {Phys. Rev.},
+  volume      = {47},
+  issue       = {10},
+  pages       = {777--780},
+  numpages    = {0},
+  year        = {1935},
+  month       = {May},
+  publisher   = aps,
+  doi         = {10.1103/PhysRev.47.777},
+  url         = {http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  abstract    = {http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  bibtex_show = {true},
+  html        = {https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf         = {example_pdf.pdf},
+  altmetric   = {248277},
+  dimensions  = {true},
+  selected    = {true}
 }
