--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 
 @article{KHADIR2022114481,
   title       = {Surface micropatterning for the formation of an in vitro functional endothelial model for cell-based biosensors},
+  abbr        = {BioSens. Bioelectron.},
   journal     = {Biosensors and Bioelectronics},
   pages       = {114481},
   year        = {2022},
@@ -13,48 +14,62 @@
   dimensions  = {false},
   author      = {Zhor Khadir and Victor Schmidt and Kevin Chabot and Jean-François Bryche and Ulrike Froehlich and Julien Moreau and Michael Canva and Paul Charette and Michel Grandbois},
   keywords    = {Surface micropatterning, Endothelium model, Cell-based biosensing, Cell response, Surface plasmon resonance imaging},
+  preview     = {cell.png},
   pdf         = {https://reader.elsevier.com/reader/sd/pii/S0956566322005218}
 }
 
 @article{schmidt2021climategan,
   title       = {ClimateGAN: Raising Climate Change Awareness by Generating Images of Floods},
+  abbr        = {ICLR},
   dimensions  = {false},
-  author      = {Victor Schmidt and Alexandra Sasha Luccioni and Mélisande Teng and Tianyu Zhang and Alexia Reynaud and Sunand Raghupathi and Gautier Cosne and Adrien Juraver and Vahe Vardanyan and Alex Hernandez-Garcia and Yoshua Bengio},
+  author      = {Victor Schmidt* and Alexandra Sasha Luccioni* and Mélisande Teng and Tianyu Zhang and Alexia Reynaud and Sunand Raghupathi and Gautier Cosne and Adrien Juraver and Vahe Vardanyan and Alex Hernandez-Garcia and Yoshua Bengio},
   year        = {2022},
   journal     = {ICLR},
   url         = {https://arxiv.org/abs/2110.02871v1},
   html        = {https://arxiv.org/abs/2110.02871v1},
   bibtex_show = {true},
+  selected    = {true},
+  code        = {https://github.com/cc-ai/climategan},
+  preview     = {climategan.jpeg},
   pdf         = {https://arxiv.org/pdf/2110.02871.pdf}
 }
 
 @inproceedings{duval2022phast,
   title       = {Ph{AST}: Physics-Aware, Scalable, and Task-specific {GNN}s for Accelerated Catalyst Design},
+  abbr        = {NeurIPS - Workshop},
   dimensions  = {false},
-  author      = {Alexandre AGM Duval and Victor Schmidt and Santiago Miret and Yoshua Bengio and Alex Hern{\'a}ndez-Garc{\'\i}a and David Rolnick},
+  author      = {Alexandre Duval* and Victor Schmidt* and Santiago Miret and Yoshua Bengio and Alex Hern{\'a}ndez-Garc{\'\i}a and David Rolnick},
   booktitle   = {AI for Accelerated Materials Design NeurIPS 2022 Workshop},
   year        = {2022},
   url         = {https://openreview.net/forum?id=hHercGKiXvP},
   html        = {https://openreview.net/forum?id=hHercGKiXvP},
   bibtex_show = {true},
+  selected    = {true},
+  preview     = {phast.png},
+  code        = {https://github.com/vict0rsch/phast},
   pdf         = {https://openreview.net/pdf?id=hHercGKiXvP}
 }
 
 @article{duval2023faenet,
   title       = {FAENet: Frame Averaging Equivariant GNN for Materials Modeling},
+  abbr        = {ICML},
   dimensions  = {false},
-  author      = {Alexandre Duval and Victor Schmidt and Alex Hernandez Garcia and Santiago Miret and Fragkiskos D. Malliaros and Yoshua Bengio and David Rolnick},
+  author      = {Alexandre Duval* and Victor Schmidt* and Alex Hernandez Garcia and Santiago Miret and Fragkiskos D. Malliaros and Yoshua Bengio and David Rolnick},
   year        = {2023},
   journal     = {ICML 2023},
   url         = {https://arxiv.org/abs/2305.05577v1},
   html        = {https://arxiv.org/abs/2305.05577v1},
   bibtex_show = {true},
+  selected    = {true},
+  code        = {https://github.com/vict0rsch/faenet},
+  preview     = {faenet.png},
   pdf         = {https://arxiv.org/pdf/2305.05577.pdf}
 }
 
 
 @article{lahlou2023torchgfn,
   title       = {torchgfn: A PyTorch GFlowNet library},
+  abbr        = {ArXiv},
   dimensions  = {false},
   author      = {Salem Lahlou and Joseph D. Viviano and Victor Schmidt},
   year        = {2023},
@@ -62,12 +77,16 @@
   url         = {https://arxiv.org/abs/2305.14594v1},
   html        = {https://arxiv.org/abs/2305.14594v1},
   bibtex_show = {true},
+  selected    = {true},
+  code        = {https://github.com/saleml/torchgfn},
+  preview     = {torchgfn.png},
   pdf         = {https://arxiv.org/pdf/2305.14594.pdf}
 }
 
 
 @article{gupta2020coviagentsim,
   title       = {COVI-AgentSim: an Agent-based Model for Evaluating Methods of Digital Contact Tracing},
+  abbr        = {ArXiv},
   dimensions  = {false},
   author      = {Prateek Gupta and Tegan Maharaj and Martin Weiss and Nasim Rahaman and Hannah Alsdurf and Abhinav Sharma and Nanor Minoyan and Soren Harnois-Leblanc and Victor Schmidt and Pierre-Luc St. Charles and Tristan Deleu and Andrew Williams and Akshay Patel and Meng Qu and Olexa Bilaniuk and Gaétan Marceau Caron and Pierre Luc Carrier and Satya Ortiz-Gagné and Marc-Andre Rousseau and David Buckeridge and Joumana Ghosn and Yang Zhang and Bernhard Schölkopf and Jian Tang and Irina Rish and Christopher Pal and Joanna Merckx and Eilif B. Muller and Yoshua Bengio},
   year        = {2020},
@@ -75,11 +94,13 @@
   url         = {https://arxiv.org/abs/2010.16004v1},
   html        = {https://arxiv.org/abs/2010.16004v1},
   bibtex_show = {true},
+  preview     = {coviagentsim.png},
   pdf         = {https://arxiv.org/pdf/2010.16004.pdf}
 }
 
 @inproceedings{bengio2021predicting,
   title       = {Predicting Infectiousness for Proactive Contact Tracing},
+  abbr        = {ICLR},
   dimensions  = {false},
   author      = {Yoshua Bengio and Prateek Gupta and Tegan Maharaj and Nasim Rahaman and Martin Weiss and Tristan Deleu and Eilif Benjamin Muller and Meng Qu and victor schmidt and Pierre-luc St-charles and hannah alsdurf and Olexa Bilaniuk and david buckeridge and gaetan caron and pierre luc carrier and Joumana Ghosn and satya ortiz gagne and Christopher Pal and Irina Rish and Bernhard Sch{\"o}lkopf and abhinav sharma and Jian Tang and andrew williams},
   booktitle   = {ICLR},
@@ -87,11 +108,13 @@
   url         = {https://openreview.net/forum?id=lVgB2FUbzuQ},
   html        = {https://openreview.net/forum?id=lVgB2FUbzuQ},
   bibtex_show = {true},
+  preview     = {proactive.png},
   pdf         = {https://openreview.net/pdf?id=lVgB2FUbzuQ}
 }
 
 @article{9325146,
   journal     = {IEEE Computer Graphics and Applications},
+  abbr        = {IEEE CG&A},
   volume      = {41},
   pages       = {8-14},
   doi         = {10.1109/MCG.2020.3025425},
@@ -102,11 +125,13 @@
   url         = {https://ieeexplore.ieee.org/document/9325146},
   html        = {https://ieeexplore.ieee.org/document/9325146},
   bibtex_show = {true},
+  preview     = {ieee.png},
   pdf         = {https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9325146}
 }
 
 @article{schmidt2020modeling,
   title       = {Modeling Cloud Reflectance Fields using Conditional Generative Adversarial Networks},
+  abbr        = {NeurIPS - Workshop},
   dimensions  = {false},
   author      = {Victor Schmidt and Mustafa Alghali and Kris Sankaran and Tianle Yuan and Yoshua Bengio},
   year        = {2020},
@@ -114,11 +139,13 @@
   url         = {https://arxiv.org/abs/2002.07579v2},
   html        = {https://arxiv.org/abs/2002.07579v2},
   bibtex_show = {true},
+  preview     = {cloud.png},
   pdf         = {https://arxiv.org/pdf/2002.07579.pdf}
 }
 
 @article{cosne2020using,
   title       = {Using Simulated Data to Generate Images of Climate Change},
+  abbr        = {ICLR - Workshop},
   dimensions  = {false},
   author      = {Gautier Cosne and Adrien Juraver and Mélisande Teng and Victor Schmidt and Vahe Vardanyan and Alexandra Luccioni and Yoshua Bengio},
   year        = {2020},
@@ -126,11 +153,13 @@
   url         = {https://arxiv.org/abs/2001.09531v1},
   html        = {https://arxiv.org/abs/2001.09531v1},
   bibtex_show = {true},
+  preview     = {mlirl.png},
   pdf         = {https://arxiv.org/pdf/2001.09531.pdf}
 }
 
 @article{schmidt2019isualizing,
   title       = {Visualizing the Consequences of Climate Change Using Cycle-Consistent Adversarial Networks},
+  abbr        = {ICLR - Workshop},
   dimensions  = {false},
   author      = {Victor Schmidt and Alexandra Luccioni and S. Karthik Mukkavilli and Narmada Balasooriya and Kris Sankaran and Jennifer Chayes and Yoshua Bengio},
   year        = {2019},
@@ -138,43 +167,38 @@
   url         = {https://arxiv.org/abs/1905.03709},
   html        = {https://arxiv.org/abs/1905.03709},
   bibtex_show = {true},
+  preview     = {viz.png},
   pdf         = {https://arxiv.org/pdf/1905.03709.pdf}
 }
 
 @article{lacoste2019quantifying,
   title       = {Quantifying the Carbon Emissions of Machine Learning},
+  abbr        = {NeurIPS - Workshop},
   dimensions  = {false},
-  author      = {Alexandre Lacoste and Alexandra Luccioni and Victor Schmidt and Thomas Dandres},
+  author      = {Alexandre Lacoste* and Alexandra Luccioni* and Victor Schmidt* and Thomas Dandres},
   year        = {2019},
   journal     = {Climate Change AI workshop, NeurIPS},
   url         = {https://arxiv.org/abs/1910.09700},
   html        = {https://arxiv.org/abs/1910.09700},
   bibtex_show = {true},
+  selected    = {true},
+  preview     = {impact.png},
+  code        = {https://github.com/mlco2/impact},
   pdf         = {https://arxiv.org/pdf/1910.09700.pdf}
 }
-
-@article{PhysRev.47.777,
-  abbr        = {PhysRev},
-  title       = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  dimensions  = {false},
-  author      = {Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract    = {In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  bibtex_show = {true},
-  journal     = {Phys. Rev.},
-  volume      = {47},
-  issue       = {10},
-  pages       = {777--780},
-  numpages    = {0},
-  year        = {1935},
-  month       = {May},
-  publisher   = aps,
-  doi         = {10.1103/PhysRev.47.777},
-  url         = {http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  abstract    = {http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  bibtex_show = {true},
-  html        = {https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf         = {example_pdf.pdf},
-  altmetric   = {248277},
-  dimensions  = {true},
-  selected    = {true}
+@article{10.1371/journal.pdig.0000199,
+  doi       = {10.1371/journal.pdig.0000199},
+  abbr      = {PLOS Dig. Health},
+  author    = {Gupta, Prateek AND Maharaj, Tegan AND Weiss, Martin AND Rahaman, Nasim AND Alsdurf, Hannah AND Minoyan, Nanor AND Harnois-Leblanc, Soren AND Merckx, Joanna AND Williams, Andrew AND Schmidt, Victor AND St-Charles, Pierre-Luc AND Patel, Akshay AND Zhang, Yang AND Buckeridge, David L. AND Pal, Christopher AND Schölkopf, Bernhard AND Bengio, Yoshua},
+  journal   = {PLOS Digital Health},
+  publisher = {Public Library of Science},
+  title     = {Proactive Contact Tracing},
+  year      = {2023},
+  month     = {03},
+  volume    = {2},
+  url       = {https://doi.org/10.1371/journal.pdig.0000199},
+  pages     = {1-19},
+  abstract  = {The COVID-19 pandemic has spurred an unprecedented demand for interventions that can reduce disease spread without excessively restricting daily activity, given negative impacts on mental health and economic outcomes. Digital contact tracing (DCT) apps have emerged as a component of the epidemic management toolkit. Existing DCT apps typically recommend quarantine to all digitally-recorded contacts of test-confirmed cases. Over-reliance on testing may, however, impede the effectiveness of such apps, since by the time cases are confirmed through testing, onward transmissions are likely to have occurred. Furthermore, most cases are infectious over a short period; only a subset of their contacts are likely to become infected. These apps do not fully utilize data sources to base their predictions of transmission risk during an encounter, leading to recommendations of quarantine to many uninfected people and associated slowdowns in economic activity. This phenomenon, commonly termed as “pingdemic,” may additionally contribute to reduced compliance to public health measures. In this work, we propose a novel DCT framework, Proactive Contact Tracing (PCT), which uses multiple sources of information (e.g. self-reported symptoms, received messages from contacts) to estimate app users’ infectiousness histories and provide behavioral recommendations. PCT methods are by design proactive, predicting spread before it occurs. We present an interpretable instance of this framework, the Rule-based PCT algorithm, designed via a multi-disciplinary collaboration among epidemiologists, computer scientists, and behavior experts. Finally, we develop an agent-based model that allows us to compare different DCT methods and evaluate their performance in negotiating the trade-off between epidemic control and restricting population mobility. Performing extensive sensitivity analysis across user behavior, public health policy, and virological parameters, we compare Rule-based PCT to i) binary contact tracing (BCT), which exclusively relies on test results and recommends a fixed-duration quarantine, and ii) household quarantine (HQ). Our results suggest that both BCT and Rule-based PCT improve upon HQ, however, Rule-based PCT is more efficient at controlling spread of disease than BCT across a range of scenarios. In terms of cost-effectiveness, we show that Rule-based PCT pareto-dominates BCT, as demonstrated by a decrease in Disability Adjusted Life Years, as well as Temporary Productivity Loss. Overall, we find that Rule-based PCT outperforms existing approaches across a varying range of parameters. By leveraging anonymized infectiousness estimates received from digitally-recorded contacts, PCT is able to notify potentially infected users earlier than BCT methods and prevent onward transmissions. Our results suggest that PCT-based applications could be a useful tool in managing future epidemics.},
+  preview   = {plos.png},
+  number    = {3}
 }
